--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -15,22 +15,22 @@ env:
   GO111MODULE: on
 
 jobs:
-  # Check generated protos match their source repos (optional for PRs).
-  vet-proto:
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    steps:
-      # Setup the environment.
-      - name: Setup Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.15
-      - name: Checkout repo
-        uses: actions/checkout@v2
-
-      # Run the vet checks.
-      - name: vet
-        run: ./vet.sh -install && ./vet.sh
+#  # Check generated protos match their source repos (optional for PRs).
+#  vet-proto:
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 20
+#    steps:
+#      # Setup the environment.
+#      - name: Setup Go
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: 1.15
+#      - name: Checkout repo
+#        uses: actions/checkout@v2
+#
+#      # Run the vet checks.
+#      - name: vet
+#        run: ./vet.sh -install && ./vet.sh
 
   # Run the main gRPC-Go tests.
   tests:
@@ -49,16 +49,16 @@ jobs:
             goversion: 1.17
             testflags: -race
 
-          - type: extras
-            goversion: 1.17
-
-          - type: tests
-            goversion: 1.17
-            goarch: 386
-
-          - type: tests
-            goversion: 1.17
-            goarch: arm64
+#          - type: extras
+#            goversion: 1.17
+#
+#          - type: tests
+#            goversion: 1.17
+#            goarch: 386
+#
+#          - type: tests
+#            goversion: 1.17
+#            goarch: arm64
 
     steps:
       # Setup the environment.
@@ -84,10 +84,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      # Only run vet for 'vet' runs.
-      - name: Run vet.sh
-        if: startsWith(matrix.type, 'vet')
-        run: ./vet.sh -install && ./vet.sh
+#      # Only run vet for 'vet' runs.
+#      - name: Run vet.sh
+#        if: startsWith(matrix.type, 'vet')
+#        run: ./vet.sh -install && ./vet.sh
 
       # Main tests run for everything except when testing "extras"
       # (where we run a reduced set of tests).
